fixed particlesJS not covering background

--- a/joshguarino/static/css/styles.css
+++ b/joshguarino/static/css/styles.css
@@ -109,9 +109,9 @@ h5{ color: var(--light); }
 #error:hover{ border: var(--light) 3px solid; }
 
 #particles-js {
-    position: absolute;
-    min-width: 100vw;
-    min-height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     background-color: var(--dark);
